Рендер ромбов в теле класса. Создание кнопки.

--- a/index.html
+++ b/index.html
@@ -6,38 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="search-animation_top-line">
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-</div>
-<div class="search-animation_bottom-line">
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-    <div class="search-animation__rhomb"></div>
-</div>
+
+<button class="start-button">START</button>
+<div class="animation"></div>
+
 <script src="index.js"></script>
 </body>
 </html>
